[package]
name = "chromehack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winapi = { version = "0.3.9", features = ["dpapi", "wincrypt", "winbase"] }
serde = "1.0.196"
serde_json = "1.0.113"
base64 = "0.21.7"
regex = "1.10.3"
rusqlite = {  version = "0.30.0", features = ["bundled"] }
aes-gcm = "0.10.3"